# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.1967.2.2 $>
#
#
# [Note: This file does not mention every change made to the NetBSD source tree.
# For an exhaustive list, please subscribe to the `source-changes' mailing list,
# or see the mailing list archives.  For more information, send a message
# containing just the word `help' to `majordomo@NetBSD.org'.]
#
# ----------------------------------------------------------------------------
# PLEASE USE THE FOLLOWING STYLE WHEN ADDING ITEMS:
#
#	theme: Content ...
#		more content ...
#		more content. [developer DATE-FORMAT]
#
# That's it, one tab to start an item, and two tabs to indent the content.
# Also please start the content with a capital and end it with a dot.
#
# This is very important for the www scripts, otherwise it won't be able to
# parse the file and the HTML output will be mangled.
#
# See htutils/changes/changes2html script for more details.
#
LIST OF CHANGES FROM PREVIOUS RELEASES:			<$Revision: 1.1967.2.2 $>


Changes from NetBSD 6.0 to NetBSD 7.0:
	window(1): Removed from the base system in favor of tmux(1).  Use the
		pkgsrc/misc/window package from now on.  [jmmv 20120215]
	pkg_add(1): Imported 20120221 version from pkgsrc. [wiz 20120221]
	file(1): Upgraded to 5.11. [christos 20120222]
	evbmips: Add support for Lemote Yeeloong Notebook. [nonaka 20120302]
	dbsym(8): Add option -p. [bsh 20120319]
	dhcpcd(8): Import dhcpcd-5.5.5. [roy 20120323]
	ipf: Upgrade to 5.1.1 with new build framework, no module and
		test support yet. [christos 20120323]
	pcc: Upgrade to 1.1.0.DEVEL 20120325. [plunky 20120325]
	openresolv(8): Import openresolv-3.5.1. [roy 20120327]
	dhcpcd(8): Import dhcpcd-5.5.6. [roy 20120328]
	apple: Recognize the apple disk partitioning scheme, and auto-discover
		wedges. Fix iPod disk mounting, by adding quirk.
		[christos 20120306]
	fstab(5): Add NAME=wedgename for fs_spec and routines to parse it. Now
		wedges can be used in /etc/fstab, even in dynamic environments